# 3d

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-exe.yml  build-installer.yml  ci.yml  pages.yml
docs/: DEVELOPMENT.md
packaging/: constraints.txt  make_icon.py  poselab_studio.spec  studio_entry.py
packaging/installer/: Install-PoseLabStudio.cmd  PoseLabStudio.cmd  Uninstall-PoseLabStudio.cmd  install_local.ps1  poselab_studio.iss  setup_env.ps1  uninstall_local.ps1
poselab/: __init__.py  _mpl_compat.py  analysis.py  cli.py  config.py  exporters.py  features.py  filters.py  gui.py  imgio.py  kinematics.py  models.py  pipeline.py  plots.py  pose3d.py  progress.py  provenance.py  skeleton.py  sources.py  tracking.py  types.py  visualize.py
poselab/backends/: __init__.py  base.py  mediapipe_backend.py  mmpose_backend.py
poselab/studio/: __init__.py  __main__.py  server.py
poselab/studio/gui/: app.css  app_main.js  index.html
poselab/webviewer/: __init__.py  __main__.py
poselab/webviewer/static/: app.css  app.js  engine.js  index.html
tests/: engine_smoke.mjs  test_analysis.py  test_cli.py  test_config.py  test_engine_js.py  test_exporters.py  test_features_plots.py  test_filters.py  test_imgio.py  test_kinematics.py  test_mmpose_backend.py  test_pose3d.py  test_progress.py  test_provenance.py  test_skeleton.py  test_sources_camera.py  test_studio.py  test_studio_server.py  test_tracking.py  test_trajectory.py  test_velocity_summary.py  test_webviewer.py  test_wide_h264_auto.py
