[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
# PyPI 配布名 (import 名は poselab のまま)。"poselab" は PyPI で取得済みのため
name = "poselab-toolkit"
version = "0.2.0"
description = "Human pose estimation toolkit for research: image / video / camera input, GUI & CLI, coordinate export"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "poselab developers" }]
keywords = [
    "pose-estimation",
    "skeleton",
    "keypoints",
    "motion-analysis",
    "mediapipe",
    "computer-vision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "mediapipe>=0.10.14",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "build", "twine"]

[project.urls]
Homepage = "https://github.com/cfn0eft/3d"
Issues = "https://github.com/cfn0eft/3d/issues"

[project.scripts]
poselab = "poselab.cli:main"
poselab-gui = "poselab.gui:main"

[tool.setuptools.packages.find]
include = ["poselab*"]
